<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/menu_account" />
    </group>

    <item android:title="More options">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />

            <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_lock_outline_black_24dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
